--- a/requirements.txt
+++ b/requirements.txt
@@ -43,3 +43,8 @@ pytest-asyncio==0.21.1
 
 # Type hints
 typing-extensions==4.9.0
+
+# Document processing
+PyPDF2==3.0.1
+python-docx==1.1.0
+pdfplumber==0.10.0
